2007-07-18  Alex Roitman  <shura@gramps-project.org>
	* configure.in: Revert checks for pycairo.

2007-07-18  Johan Gonqvist <johan.gronqvist@gmail.com>
	* src/plugins/NarrativeWeb.py:
	Narrative web-site plugin chrashes due to handling of notes. (#0001085)

2007-07-18  Brian Matherly <brian@gramps-project.org>
            Robert Cawley <rjc@cawley.id.au>
	* src/plugins/DetDescendantReport.py:
	Add Spouse photo & notes to Detailed Descendant Report (#0001110)

2007-07-17  Don Allingham  <don@gramps-project.org>
	* src/GrampsDbUtils/_ReadGedcom.py: fix value from encoding overide
	menu

2007-07-17  Don Allingham  <don@gramps-project.org>
	* src/Editors/_EditSourceRef.py: remove text tab
	* src/Editors/_EditRepoRef.py: Add privacy to reporef
	* src/Lru.py: pylint
	* src/Selectors/_BaseSelector.py: set sort column
	* src/DbManager.py: clean up of dnd
	* src/glade/gramps.glade: Add privacy to reporef
	* src/DisplayModels/_PeopleModel.py: try to speed up sorts using
	mapper values
	* src/GrampsDbUtils/_GedcomParse.py: handle source text citations
	* src/GrampsDbUtils/_ReadGedcom.py: type check
	* src/GrampsDbUtils/_GedcomLex.py: handle broken conc
	* src/GrampsDbUtils/_WriteGedcom.py: handle source text citations

2007-07-17  Alex Roitman  <shura@gramps-project.org>
	* src/RelLib/_SourceRef.py (unserialize): Minor change.
	* src/RelLib/_Source.py: Remove note.
	* src/RelLib/_Person.py (get_text_data_child_list): Remove note.
	* data/grampsxml.dtd: Add missing datespan for lds and sourceref.
	* data/grampsxml.rng: Add privacy to reporef.
	* data/grampsxml.dtd: Add privacy to reporef.
	* src/GrampsDb/_GrampsBSDDB.py (convert_notes_13): Add reporef
	privacy on upgrade.
	* src/GrampsDbUtils/_ReadXML.py (start_note): Set privacy for
	reporef's notes;
	(start_reporef): Parse prvacy attribute for reporefs.
	* src/GrampsDb/_GrampsDbWriteXML.py (write_reporef_list): Write
	privacy attribitue.
	* src/RelLib/_RepoRef.py: Add privacy.
